@@ -3,7 +3,8 @@ Version 0.9.5.1 - 201010
 - MAJOR: fix message empty when handled by gnokii or smstools due to single quote in $lc (kendokar)
 - add htmlspecialchars to SMS messages shown in inbox, incoming and outgoing (anton)
 - add new gateway module gammu, tested using backend FILES with Gammu version 1.28.0 (anton)
-- add interceptincomingsms() lib/fn_core.php, its hookable from plugin tools (anton)
+- add interceptincomingsms() lib/fn_core.php, in setsmsincomingaction(), hookable for tools (anton)
+- add interceptsmstoinbox() lib/fn_core.php, in insertsmstoinbox(), hookable for tools (anton)
 - add css class .error_string and .required, themes common.css (anton)
 - add index.php?app=call to run hookable function 'call', this will replace all direct access (anton)
 - change websend2pv() to sendsms_pv() and websend2group() to sendsms_bc(), lib/fn_sendsms.php (anton)
